<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RSSReader</string>
    <string name="menu_home">首页</string>
    <string name="menu_subscribe">订阅</string>
    <string name="menu_star">收藏</string>
    <string name="menu_help">帮助</string>
    <string name="menu_setting">设置</string>
    <string name="menu_suggestion">建议</string>


    <string name="activity_help">帮助</string>
    <string name="activity_setting">设置</string>
    <string name="activity_suggestion">建议</string>
    <string name="activity_article">文章</string>
    <string name="activity_detail">原文</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>