<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.Main.MainActivity"
    >
    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_item_main"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"/>
        <item android:id="@+id/menu_item_subscribe"
            android:icon="@drawable/ic_subscribe"
            android:title="@string/menu_subscribe"/>
        <item android:id="@+id/menu_item_star"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_star"/>
        <item android:id="@+id/menu_item_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help"/>
        <item android:id="@+id/menu_item_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting"/>
        <item android:id="@+id/menu_item_suggestion"
            android:icon="@drawable/ic_suggestion"
            android:title="@string/menu_suggestion"/>
    </group>
</menu>